@@ -49,6 +49,9 @@ See also [[https://github.com/haskell/haskell-mode/compare/v13.07...v13.08][deta
 
 - Add support for "cabal repl" process type to `haskell-interactive-mode'
 
+- Add new Haskell compilation sub-mode and associated `haskell-compile'
+  command
+
 * Changes in 13.7
 
 See also [[https://github.com/haskell/haskell-mode/compare/v13.06...v13.07][detailed Git history]].
